crates/vexor-compiler/tests/golden/error/input/match_missing_arrow.vx
let r = 100
let result = match r {
    // missing =>
    100 Circle(100)
}
export result
